--- a/MikeProjects/index.html
+++ b/MikeProjects/index.html
@@ -37,15 +37,22 @@
                 <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red4.JPG" max-width=100% height=auto/>&nbsp;</div>
 
 
-                
- <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/Red3.JPG" max-width=100% height=auto/>&nbsp;</div>
+
+
+ <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/HonieUkel1.JPG" max-width=100% height=auto/>&nbsp;</div>  
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/HonieUkel2.JPG" max-width=100% height=auto/>&nbsp;</div> 
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/HonieUkel3.JPG" max-width=100% height=auto/>&nbsp;</div>
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/HonieUkel4.JPG" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+
    
-    <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red7.JPG" max-width=100% height=auto/>&nbsp;</div> 
-
-
-         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red5.JPG" max-width=100% height=auto/>&nbsp;</div>
-
-   <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red6.JPG" max-width=100% height=auto/>&nbsp;</div>
+                
+ <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/Red3.JPG" max-width=100% height=auto/>&nbsp;</div>  
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red7.JPG" max-width=100% height=auto/>&nbsp;</div> 
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red5.JPG" max-width=100% height=auto/>&nbsp;</div>
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red6.JPG" max-width=100% height=auto/>&nbsp;</div>
 
   <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/Red8.JPG" max-width=100% height=auto/>&nbsp;</div>
 
