--- a/MikeProjects/indexAlt.html
+++ b/MikeProjects/indexAlt.html
@@ -31,6 +31,14 @@
 
   <div class="row">
 
+
+ <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/HonieUkel1.JPG" max-width=100% height=auto/>&nbsp;</div>  
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/HonieUkel2.JPG" max-width=100% height=auto/>&nbsp;</div> 
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/HonieUkel3.JPG" max-width=100% height=auto/>&nbsp;</div>
+ <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/HonieUkel4.JPG" max-width=100% height=auto/>&nbsp;</div>
+
+
+   
         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red2.JPG" max-width=100% height=auto/>&nbsp;</div>
 
                 <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red4.JPG" max-width=100% height=auto/>&nbsp;</div>
